--- a/joomla_v4/translations/package/ur-PK/pkg_ur-PK.xml
+++ b/joomla_v4/translations/package/ur-PK/pkg_ur-PK.xml
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <extension type="package" method="upgrade">
-	<name>Urdu (Pakistan) ur-PK Language Pack</name>
-	<packagename/>
-	<version/>
-	<creationDate/>
-	<author/>
-	<authorEmail/>
-	<authorUrl/>
-	<copyright/>
-	<license/>
-	<url/>
-	<packager/>
-	<packagerurl/>
-	<description><![CDATA[ur-PK language pack]]></description>
-	<blockChildUninstall>true</blockChildUninstall>
-	<files>
-		<folder type="language" client="site" id=""/>
-		<folder type="language" client="administrator" id=""/>
-		<folder type="language" client="api" id=""/>
-	</files>
-	<updateservers>
-		<server type="collection" priority="1" name="">
-			https://update.joomla.org/language/translationlist_4.xml
-		</server>
-	</updateservers>
+    <name>Urdu (Pakistan) ur-PK Language Pack</name>
+    <packagename>ur-PK</packagename>
+    <version>4.3.2.1</version>
+    <creationDate>2023-05</creationDate>
+    <author>عبدالوحید</author>
+    <authorEmail>info@abdulwaheed.pk</authorEmail>
+    <authorUrl>www.abdulwaheed.pk</authorUrl>
+    <copyright>(C) 2023 Open Source Matters, Inc.</copyright>
+    <license>https://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
+    <url>https://github.com/joomla/joomla-cms</url>
+    <packager>عبدل</packager>
+    <packagerurl>www.abdulwaheed.pk</packagerurl>
+    <description>
+        <![CDATA[ur-PK language pack]]>
+    </description>
+    <blockChildUninstall>true</blockChildUninstall>
+    <files>
+        <folder type="language" client="site" id="ur-PK">language/ur-PK</folder>
+        <folder type="language" client="administrator" id="ur-PK">administrator/language/ur-PK</folder>
+        <folder type="language" client="api" id="ur-PK">language/ur-PK</folder>
+    </files>
+    <updateservers>
+        <server type="collection" priority="1" name="تسلیم شدہ جملہ! ترجمے">https://update.joomla.org/language/translationlist_4.xml</server>
+    </updateservers>
 </extension>
