--- a/joomla_v4/translations/package/ur-PK/pkg_ur-PK.xml
+++ b/joomla_v4/translations/package/ur-PK/pkg_ur-PK.xml
@@ -2,8 +2,8 @@
 <extension type="package" method="upgrade">
     <name>Urdu (Pakistan) ur-PK Language Pack</name>
     <packagename>ur-PK</packagename>
-    <version>4.3.2.1</version>
-    <creationDate>2023-05</creationDate>
+    <version>1.0</version>
+    <creationDate>مئی 2023</creationDate>
     <author>عبدالوحید</author>
     <authorEmail>info@abdulwaheed.pk</authorEmail>
     <authorUrl>www.abdulwaheed.pk</authorUrl>
